force-app/main/default/objects/ucinn_portal_Recipient__c/ucinn_portal_Recipient__c.object-meta.xml
<CustomObject>
    <label>Recipient</label>
    <nameField>
        <label>Recipients Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recipients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>