force-app/main/default/objects/ucinn_portal_Recipient__c/fields/Filter_Logic__c.field-meta.xml
<CustomField>
    <fullName>Filter_Logic__c</fullName>
    <label>Filter Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>