force-app/main/default/objects/ucinn_portal_Recipient__c/fields/Number_of_Filters__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Filters__c</fullName>
    <label>Number of Filters</label>
    <summaryForeignKey>ucinn_portal_Recipient_Filter__c.Recipient__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>