force-app/main/default/objects/ucinn_portal_Recipient__c/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zone</label>
    <referenceTo>ucinn_portal_Zone__c</referenceTo>
    <relationshipLabel>Recipients</relationshipLabel>
    <relationshipName>ucinn_portal_Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>